http://the-internet.herokuapp.com/ - training

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,31 @@ src/test/java/.DS_Store
 .idea/gradle.xml
 .gradle/4.8/fileHashes/fileHashes.lock
 .gradle/4.8/fileHashes/fileHashes.bin
+.idea/workspace.xml
+*.jar
+*.json
+*.yml
+*.js
+*.txt
+*.properties
+*.bat
+*.png
+*.html
+*.csv
+*.ico
+*.jpg
+*.xml
+*.lock
+*.bin
+.DS_Store
+.allure/allure-2.6.0/bin/allure
+*.svg
+*.css
+src/test/java/.DS_Store
+src/test/.DS_Store
+*.idx
+*.zip
+*.xml
+*.lock
+*.bin
+.DS_Store
