--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ repositories {
 
 dependencies {
     testCompile group: 'org.testng', name: 'testng', version: '6.14.3'
-    compile group: 'com.codeborne', name: 'selenide', version: '4.14.0'
+    compile group: 'com.codeborne', name: 'selenide', version: '5.0.0-rc.2'
     testCompile group: 'org.hamcrest', name: 'java-hamcrest', version: '2.0.0.0'
     testCompile 'io.rest-assured:rest-assured:3.1.0'
     compile group: 'io.qameta.allure', name: 'allure-testng', version: '2.6.0'
